PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Prevent bufferoverflows for FLAC bitrate and samplingrate.
		- Add extra options for output of the stats, allowing hiding of users, groups and/or zerodata.
		- Fix psxc-imdb.sh having trailing '|' for some vars (thanks to silv3rr for the language-var).
		- Fix Blow.tcl not storing keys for channels and users with certain special chars in (thanks to ParAd0x^)
		- Fix Blow.tcl not responding to encrypted messages when keyx is disabled (will use default key).
		- Fix wrong release type being used, sometimes causing leftover progressbars. (thanks to tittof, crx and jochar for noticing).
		- ^--- 2017 ---^
		- Improve ngBot's login.log parsing for bad usernames.
		- Add option to disable specified announces caused by triggers. See ngBot.conf.defaults.
		- Refactor Blow.tcl, remove topic trigger binds if unwanted, add Blow.zpt for *TOPIC.
		- Fix ngBot reloading on userfile reloads caused by botnet userfile sharing.
		  This had possible negative side-effects in plugins.
		- Fix ngBot logoutput of amount of plugins loaded when only 1 is loaded.
		- Fix psxc-symlink-maker not updating links when sorting by title when dest has changed.
		- Fix psxc-imdb parsing Directors with single quotes in their names correctly.
		- Fix psxc-imdb to parse all data again from pages now considered binary by certain grep-versions.
		- Change behaviour of use_partial_on_noforce to match strings in noforce_sfv_first_dirs with
		  any part of the path instead of the rightmost part.
		- Fix TVMaze plugin show_network showing incorrect result (thanks to ViP3R for noticing).
		- Fix %u_pid in SPEED* announces, add %currentdir for SPEED* and USER announces and %u_pid for USER announce.
		- Fix typos in TVMaze plugin (thanks to sam-lap for noticing)
		- Add TVMaze sitebot plugin, revamped TVRage plugin by MrCode.
		- ^--- 2016 ---^
		- Fix disabling of BADMSGINVITE announce.